--- a/client/index.css
+++ b/client/index.css
@@ -2,11 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-*{
+* {
     padding: 0;
     margin: 0;
 }
-.root_container{
+
+.root_container {
     display: flex;
     flex-direction: column;
     height: 100vh;
@@ -15,60 +16,73 @@
     color: #c9d1d9;
     font-family: monospace;
 }
-.header{
+
+.header {
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 6px 8px;
     background: #161b22;
 }
-.header .logo_block{
+
+.header .logo_block {
     display: flex;
     align-items: center;
     gap: 6px;
 }
-.header .logo_block .logo{
+
+.header .logo_block .logo {
     padding: 4px;
     background: #21262d;
     border-radius: 5px;
     border: 1px solid #30363d;
 }
-.header .logo_block .logo_text{
+
+.header .logo_block .logo_text {
     font-weight: bold;
     color: white;
 }
-.header .logo_block .status_in_logo{
+
+.header .logo_block .status_in_logo {
     font-size: 10px;
     font-weight: bold;
     display: flex;
     align-items: center;
     gap: 4px;
 }
-.status_in_logo .badge{
+
+.status_in_logo .badge {
     border-radius: 50px;
     width: 4px;
     height: 4px;
     display: inline-block;
 }
-.badge_green{
+
+.badge_green {
     background-color: green;
 }
-.badge_red{
+
+.badge_red {
     background-color: red;
 }
-.text-green-500{
+
+.text-green-500 {
     color: green;
 }
-.text-red-500{
+
+.text-red-500 {
     color: red;
 }
-.text-yellow-500{
-    color:yellow;
+
+.text-yellow-500 {
+    color: yellow;
 }
-.text-gray-500{
+
+.text-gray-500 {
     color: gray;
 }
-main{
+
+main {
     display: flex;
     overflow-y: auto;
     position: relative;
@@ -77,7 +91,8 @@ main{
     gap: 16px;
     scroll-behavior: smooth;
 }
-main .signal{
+
+main .signal {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -86,81 +101,97 @@ main .signal{
     color: #8b949e;
     opacity: 50%;
 }
-.mb-4{
-    margin-bottom:16px;
+
+.mb-4 {
+    margin-bottom: 16px;
 }
-.message{
+
+.message {
     display: flex;
     flex-direction: column;
     max-width: 70%;
-    
+
 }
-.them{
+
+.them {
     align-self: flex-start;
     align-items: flex-start;
 }
-.me{
+
+.me {
     align-self: flex-end;
     align-items: flex-end;
 }
-.message .info{
+
+.message .info {
     display: flex;
     align-items: baseline;
     gap: 4px;
     margin-bottom: 2px;
     padding: 0 2px;
-   
+
 }
-.info .username{
+
+.info .username {
     font-size: x-small;
     font-weight: bold;
-    
+
 }
-.text-blue-400{
+
+.text-blue-400 {
     color: #5858fd;
 }
-.text-green-400{
+
+.text-green-400 {
     color: #02db02;
 }
-.flex-row-reverse{
+
+.flex-row-reverse {
     flex-direction: row-reverse;
 }
-.flex-row{
+
+.flex-row {
     flex-direction: row;
 }
-.time{
+
+.time {
     font-size: 10px;
     color: #8b949e;
 }
-.message .text{
+
+.message .text {
     padding: 6px 8px;
     border-radius: 16px;
     font-size: medium;
     box-shadow: 0px 1px 1px #323131;
     word-break: break-word;
     border: 1px solid;
-    
-    
-    
+
+
+
 }
-.text.them{
+
+.text.them {
     border-top-left-radius: 0px;
     border-color: #30363d;
     background: #21262d;
-    color:#c9d1d9;
+    color: #c9d1d9;
 }
-.text.me{
+
+.text.me {
     border-top-right-radius: 0px;
     border-color: #23863630;
     background-color: #23863610;
-    color:white;
+    color: white;
 }
-.status_message{
+
+.status_message {
     display: flex;
     justify-content: center;
     padding: 4px 0;
 }
-.status_message span{
+
+.status_message span {
     text-transform: uppercase;
     font-size: 10px;
     color: #8b949e;
@@ -169,13 +200,15 @@ main .signal{
     border-radius: 50px;
     border: 1px solid #30363d;
 }
-footer{
+
+footer {
     background: #161b22;
     border-top: 1px solid #30363d;
     padding: 16px;
     z-index: 20;
 }
-footer form{
+
+footer form {
     position: relative;
     max-width: 700px;
     margin: 0 auto;
@@ -183,13 +216,16 @@ footer form{
     align-items: center;
     gap: 4px;
 }
-.flex-1{
+
+.flex-1 {
     flex-grow: 1;
 }
-.relative{
+
+.relative {
     position: relative;
 }
-form .message_input{
+
+form .message_input {
     width: 100%;
     background: #0d1117;
     border: 1px solid #30363d;
@@ -199,16 +235,19 @@ form .message_input{
     transition: all;
     margin-left: 28px;
 }
-form .message_input:focus{
-    outline:none;
-    border:3px solid #238636;
-    
+
+form .message_input:focus {
+    outline: none;
+    border: 3px solid #238636;
+
 }
-form .message_input:disabled{
-    opacity:50%;
+
+form .message_input:disabled {
+    opacity: 50%;
     cursor: not-allowed;
 }
-form button[type="submit"]{
+
+form button[type="submit"]:not(.save-button) {
     padding: 10px;
     border: 1px;
     background: #238636;
@@ -217,15 +256,18 @@ form button[type="submit"]{
     z-index: 100;
     transition: colors;
 }
-form button[type="submit"]:hover{
-    background:#2ea043;
-   
+
+form button[type="submit"]:hover {
+    background: #2ea043;
+
 }
-form button[type="submit"]:disabled{
-    background:#21262d;
-    color:#8b949e;
+
+form button[type="submit"]:disabled {
+    background: #21262d;
+    color: #8b949e;
 }
-.settings_button{
+
+.settings_button {
     position: fixed;
     bottom: 16px;
     left: 4px;
